--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,4 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+ignored_error_codes = [3628, 5574]
